Correção de encode e de Map com lib Guava.