@@ -3,13 +3,15 @@ package br.com.eleicoes.util;
 import java.util.List;
 import java.util.Map;
 
+import com.google.common.collect.ImmutableMap;
+
 import br.com.eleicoes.model.Candidato;
 import br.com.eleicoes.model.CandidatoPrincipal;
 
 public class MensagensUtils {
 
 	public static final String MENSAGEM_INICIAL_CANDIDATOS = 
-			"Escolha uma das opÃ§Ãµes para pesquisa do seu candidato: \n"
+			"Escolha uma das opções para pesquisa do seu candidato: \n"
 			+ "\n1 - Presidente"
 			+ "\n2 - Governador"
 			+ "\n3 - Senador"
@@ -17,69 +19,69 @@ public class MensagensUtils {
 			+ "\n5 - Deputado Estadual";
 	
 	public static final String MENSAGEM_REGIOES = 
-			"De qual regiÃ£o Ã© o seu candidato: \n"
+			"De qual região é o seu candidato: \n"
 			+ "\n1 - Norte"
 			+ "\n2 - Nordeste"
 			+ "\n3 - Centro-Oeste"
 			+ "\n4 - Sudeste"
 			+ "\n5 - Sul"
-			+ "\n\nDigite 'inicio' para comeÃ§ar novamente";
+			+ "\n\nDigite 'inicio' para começar novamente";
 	
 	public static final String MENSAGEM_NORTE = 
-			"De qual estado Ã© o seu candidato: \n"
+			"De qual estado é o seu candidato: \n"
 			+ "\n1 - Acre"
 			+ "\n2 - Amazonas"
-			+ "\n3 - AmapÃ¡"
-			+ "\n4 - ParÃ¡"
-			+ "\n5 - RondÃ´nia"
+			+ "\n3 - Amapá"
+			+ "\n4 - Pará"
+			+ "\n5 - Rondônia"
 			+ "\n6 - Roraima"
 			+ "\n7 - Tocantins"
-			+ "\n\nDigite 'inicio' para comeÃ§ar novamente";
+			+ "\n\nDigite 'inicio' para começar novamente";
 	
 	public static final String MENSAGEM_NORDESTE = 
-			"De qual estado Ã© o seu candidato: \n"
+			"De qual estado é o seu candidato: \n"
 			+ "\n1 - Alagoas"
 			+ "\n2 - Bahia"
-			+ "\n3 - CearÃ¡"
-			+ "\n4 - MaranhÃ£o"
-			+ "\n5 - ParaÃ­ba"
+			+ "\n3 - Ceará"
+			+ "\n4 - Maranhão"
+			+ "\n5 - Paraíba"
 			+ "\n6 - Pernambuco"
 			+ "\n7 - Piaui"
 			+ "\n8 - Rio Grande do Norte"
 			+ "\n9 - Sergipe"
-			+ "\n\nDigite 'inicio' para comeÃ§ar novamente";
+			+ "\n\nDigite 'inicio' para começar novamente";
 	
 	public static final String MENSAGEM_CENTRO_OESTE = 
-			"De qual estado Ã© o seu candidato: \n"
+			"De qual estado é o seu candidato: \n"
 			+ "\n1 - Distrito Federal"
-			+ "\n2 - GoiÃ¡s"
+			+ "\n2 - Goiás"
 			+ "\n3 - Mato Grosso do Sul"
 			+ "\n4 - Mato Grosso"
-			+ "\n\nDigite 'inicio' para comeÃ§ar novamente";
+			+ "\n\nDigite 'inicio' para começar novamente";
 	
 	public static final String MENSAGEM_SUDESTE = 
-			"De qual estado Ã© o seu candidato: \n"
-			+ "\n1 - EspÃ­rito Santo"
+			"De qual estado é o seu candidato: \n"
+			+ "\n1 - Espírito Santo"
 			+ "\n2 - Minas Gerais"
 			+ "\n3 - Rio de Janeio"
-			+ "\n4 - SÃ£o Paulo"
-			+ "\n\nDigite 'inicio' para comeÃ§ar novamente";
+			+ "\n4 - São Paulo"
+			+ "\n\nDigite 'inicio' para começar novamente";
 	
 	public static final String MENSAGEM_SUL = 
-			"De qual estado Ã© o seu candidato: \n"
-			+ "\n1 - ParanÃ¡"
+			"De qual estado é o seu candidato: \n"
+			+ "\n1 - Paraná"
 			+ "\n2 - Rio Grande do Sul"
 			+ "\n3 - Santa Catarina"
-			+ "\n\nDigite 'inicio' para comeÃ§ar novamente";
+			+ "\n\nDigite 'inicio' para começar novamente";
 	
 	public static final String MENSAGEM_NOME_CANDIDATO = 
 			"Qual o nome do seu candidato ?";
 	
 	public static final String MENSAGEM_ERRO = 
-			"Resposta incompatÃ­vel, favor tente novamente !!!";
+			"Resposta incompatível, favor tente novamente !!!";
 	
 	public static final String MENSAGEM_ERRO_NOME_CANDIDATO = 
-			"Candidato nÃ£o foi encontrado, favor tente novamente !!!";
+			"Candidato não foi encontrado, favor tente novamente !!!";
 	
 	public static final String MENSAGEM_ERRO_CANDIDADO_DUPLICADO = 
 			"Foi encontrado mais de 1 candidato com esse nome \n"
@@ -89,16 +91,16 @@ public class MensagensUtils {
 			"Para iniciar nova pesquisa digite 'inicio'";
 	
 	public static String mensagemCandidatoFormatada(Candidato candidato) {
-		return "NÃºmero candidato: "+candidato.getNumero()+"\n"
+		return "Número candidato: "+candidato.getNumero()+"\n"
 				+ "Nome Urna: "+candidato.getNomeUrna()+"\n"
 				+ "Nome Completo: "+candidato.getNomeCompleto()+"\n"
 				+ "Cargo: "+candidato.getCargo().getNome()+"\n"
-				+ "SituaÃ§Ã£o: "+candidato.getDescricaoTotalizacao()+"\n"
+				+ "Situação: "+candidato.getDescricaoTotalizacao()+"\n"
 				+ "Partido: "+candidato.getPartido().getSigla() + "\n"				
 				+ "O que mais gostaria de saber sobre esse candidato? \n"
-				+ "\n1 - Limite de gasto 1Âº Turno"
-				+ "\n2 - Limite de gasto 2Âº Turno"
-				+ "\n3 - Fundo PartidÃ¡rio Utilizado"
+				+ "\n1 - Limite de gasto 1º Turno"
+				+ "\n2 - Limite de gasto 2º Turno"
+				+ "\n3 - Fundo Partidário Utilizado"
 				+ "\n4 - Fundo Especial Utilizado";
 	}
 	
@@ -111,13 +113,13 @@ public class MensagensUtils {
 		String mensagemRetorno = "";
 		switch (respostaUsuario) {
 		case "1":
-			mensagemRetorno = "Limite de gasto 1Âº Turno R$: " + String.format("%.2f", candidatoPrincipal.getDespesas().getLimiteDeGasto1T());
+			mensagemRetorno = "Limite de gasto 1º Turno R$: " + String.format("%.2f", candidatoPrincipal.getDespesas().getLimiteDeGasto1T());
 			break;
 		case "2":
-			mensagemRetorno = "Limite de gasto 2Âº Turno R$: " + String.format("%.2f", candidatoPrincipal.getDespesas().getLimiteDeGasto2T());
+			mensagemRetorno = "Limite de gasto 2º Turno R$: " + String.format("%.2f", candidatoPrincipal.getDespesas().getLimiteDeGasto2T());
 			break;
 		case "3":
-			mensagemRetorno = "Fundo partidÃ¡rio R$: " + String.format("%.2f", candidatoPrincipal.getDespesas().getFundosPartidarios());
+			mensagemRetorno = "Fundo partidário R$: " + String.format("%.2f", candidatoPrincipal.getDespesas().getFundosPartidarios());
 			break;
 		case "4":
 			mensagemRetorno = "Fundo Especial R$: " +String.format("%.2f", candidatoPrincipal.getDespesas().getFundoEspecial());
@@ -155,23 +157,23 @@ public class MensagensUtils {
 		String mensagemRetorno = "";
 		switch (idRegiao) {
 		case "1":
-			Map<String, String> mapNorte = Map.of("1","AC","2","AM","3","AP","4","PA","5","RO","6","RR","7","TO");
+			Map<String, String> mapNorte = ImmutableMap.of("1","AC","2","AM","3","AP","4","PA","5","RO","6","RR","7","TO");
 			mensagemRetorno = mapNorte.get(codigoEstado);
 			break;
 		case "2":
-			Map<String, String> mapNordeste = Map.of("1","AL","2","BA","3","CE","4","MA","5","PB","6","PE","7","PI","8","RN","9","SE");
+			Map<String, String> mapNordeste = ImmutableMap.of("1","AL","2","BA","3","CE","4","MA","5","PB","6","PE","7","PI","8","RN","9","SE");
 			mensagemRetorno = mapNordeste.get(codigoEstado);			
 			break;
 		case "3":
-			Map<String, String> mapCentroOeste = Map.of("1","DF","2","GO","3","MS","4","MT");
+			Map<String, String> mapCentroOeste = ImmutableMap.of("1","DF","2","GO","3","MS","4","MT");
 			mensagemRetorno = mapCentroOeste.get(codigoEstado);
 			break;
 		case "4":
-			Map<String, String> mapSudeste = Map.of("1","ES","2","MG","3","RJ","4","SP");
+			Map<String, String> mapSudeste = ImmutableMap.of("1","ES","2","MG","3","RJ","4","SP");
 			mensagemRetorno = mapSudeste.get(codigoEstado);
 			break;
 		case "5":
-			Map<String, String> mapSul = Map.of("1","PR","2","RS","3","SC");
+			Map<String, String> mapSul = ImmutableMap.of("1","PR","2","RS","3","SC");
 			mensagemRetorno = mapSul.get(codigoEstado);
 			break;
 		}
